--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,21 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.maram.myexample"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    productFlavors {
+        flavor {
         }
     }
 }
@@ -32,4 +37,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.support:multidex:1.0.0'
 }
